--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
         </div>
     <div class="contact-col">
 
-        <form action="form-handler.php" method="post">
+        <form action="https://formspree.io/f/moqzwrzr" method="post">
             <input type="text" name="name" placeholder="Name" required>
             <input type="email" name="email" placeholder="Email address" required>
             <input type="text" name="subject" placeholder="Subject:" required>
